[gd_scene load_steps=3 format=3 uid="uid://bkb53h0ivrhpm"]

[ext_resource type="Script" path="res://02_scenes/04_screens/menuScreen.gd" id="1_friwq"]

[sub_resource type="Theme" id="Theme_33i87"]

[node name="menuScreen" type="Node2D"]
script = ExtResource("1_friwq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="fondo" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0

[node name="nombreTitulo" type="Label" parent="."]
offset_left = 109.0
offset_top = 68.0
offset_right = 276.0
offset_bottom = 192.0
theme = SubResource("Theme_33i87")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 43
text = "Titulo
do Xogo"
horizontal_alignment = 1

[node name="bCreditos" type="Button" parent="."]
offset_left = 479.0
offset_top = 256.0
offset_right = 552.0
offset_bottom = 287.0
text = "Créditos"

[node name="bSair" type="Button" parent="."]
offset_left = 478.0
offset_top = 313.0
offset_right = 551.0
offset_bottom = 344.0
text = "Saír"

[node name="bXogar" type="Button" parent="."]
offset_left = 482.0
offset_top = 154.0
offset_right = 555.0
offset_bottom = 185.0
text = "Xogar"

[node name="bControles" type="Button" parent="."]
offset_left = 474.0
offset_top = 204.0
offset_right = 564.0
offset_bottom = 236.0
text = "Controles"

[connection signal="pressed" from="bCreditos" to="." method="_on_b_creditos_pressed"]
[connection signal="pressed" from="bSair" to="." method="_on_b_sair_pressed"]
[connection signal="pressed" from="bXogar" to="." method="_on_b_xogar_pressed"]
[connection signal="pressed" from="bControles" to="." method="_on_b_controles_pressed"]
